[package]
name = "AdventOfCode2024"
version = "0.1.0"
authors = ["Ronak Nisher <nisher.ronak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
rand = "0.8.5"
regex = "1.10.2"

[[bin]]
name = "aoc"
path = "src/main.rs"
